--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-jasmine": "^2.3.0",
     "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.2",
