--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-jasmine": "^2.3.0",
+    "gulp-jasmine-browser": "^1.3.1",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^2.0.1",
-    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
+    "jasmine": "^2.4.1",
     "jshint": "^2.9.2",
-    "jshint-stylish": "^2.2.0"
+    "jshint-stylish": "^2.2.0",
+    "phantomjs": "^2.1.7"
   },
   "dependencies": {}
 }
