--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "sewrJS",
-  "version": "0.0.1",
+  "name": "sewrjs",
+  "version": "0.0.2",
   "description": "Yet another functional library",
   "authors": [
     "Juan Alvarez"
   ],
   "license": "MIT",
+  "scripts": {
+    "test": "nodemon --exec jasmine",
+    "check": "jshint --verbose src/sewr.js"
+  },
   "homepage": "https://github.com/asjuan/sewrjs",
   "repository": {
     "type": "git",
     "url": "https://github.com/asjuan/sewrjs.git"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-jasmine-browser": "^1.3.1",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.3",
-    "jshint": "^2.9.2",
-    "jshint-stylish": "^2.2.0",
-    "phantomjs": "^2.1.7"
+    "jasmine": "^2.9.0",
+    "jshint": "^2.9.5",
+    "nodemon": "^1.14.11"
   },
   "dependencies": {}
 }
