--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "devDependencies": {
     "jasmine": "^2.9.0",
     "jshint": "^2.9.5",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "uglify-js": "^3.3.9"
   },
   "dependencies": {}
 }
